force-app/main/default/objects/CommercialPlan__c/CommercialPlan__c.object-meta.xml
<CustomObject>
    <description>API Abbrv: CP</description>
    <label>Commercial Plan</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>