force-app/main/default/objects/CommercialPlan__c/fields/AsynchronProcessing__c.field-meta.xml
<CustomField>
    <fullName>AsynchronProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asynchron Processing</label>
    <type>Checkbox</type>
</CustomField>