force-app/main/default/objects/CommercialPlan__c/fields/BudgetCode__c.field-meta.xml
<CustomField>
    <fullName>BudgetCode__c</fullName>
    <label>Condition Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>