force-app/main/default/objects/CommercialPlan__c/fields/BusinessUnitSource__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specify BU origin for the even (Which entity is working on)</description>
    <label>BU Source</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The status of BusinessUnitSource (Supplier) should be &apos;Open&apos;</errorMessage>
        <filterItems>
            <field>Orga_BU__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Commercial Plans (BU Source)</relationshipLabel>
    <relationshipName>CommercialPlansBUSource</relationshipName>
    <type>Lookup</type>
</CustomField>