force-app/main/default/objects/CommercialPlan__c/fields/BusinessUnitTarget__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BU targetted for the client</description>
    <label>BU Target</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The BU Status should be &apos;Open&apos;.
The selected Client should be the same as the one selected at the Commercial Plan Parent level.</errorMessage>
        <filterItems>
            <field>Orga_BU__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.Related_Client__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Commercial Plans (BU Target)</relationshipLabel>
    <relationshipName>CommercialPlansBUTarget</relationshipName>
    <type>Lookup</type>
</CustomField>