force-app/main/default/objects/CommercialPlan__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Event Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>