force-app/main/default/objects/CommercialPlan__c/fields/CoveredAmount__c.field-meta.xml
<CustomField>
    <fullName>CoveredAmount__c</fullName>
    <label>Already Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>