force-app/main/default/objects/CommercialPlan__c/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <externalId>true</externalId>
    <label>Ext id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>