force-app/main/default/objects/CommercialPlan__c/fields/ExtractIdLast__c.field-meta.xml
<CustomField>
    <fullName>ExtractIdLast__c</fullName>
    <label>Last Extraction id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>