force-app/main/default/objects/CommercialPlan__c/fields/HierarchyElement__c.field-meta.xml
<CustomField>
    <fullName>HierarchyElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipName>CommercialPlansHE</relationshipName>
    <type>Lookup</type>
</CustomField>