force-app/main/default/objects/CommercialPlan__c/fields/IntegtIdLast__c.field-meta.xml
<CustomField>
    <fullName>IntegtIdLast__c</fullName>
    <label>Last Integration id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>