force-app/main/default/objects/CommercialPlan__c/fields/IntegtLDate__c.field-meta.xml
<CustomField>
    <fullName>IntegtLDate__c</fullName>
    <label>Last Integration date</label>
    <type>DateTime</type>
</CustomField>