force-app/main/default/objects/CommercialPlan__c/fields/SellInBDate__c.field-meta.xml
<CustomField>
    <fullName>SellInBDate__c</fullName>
    <label>SellIn Start Date</label>
    <type>Date</type>
</CustomField>