force-app/main/default/objects/CommercialPlan__c/fields/SellInEDate__c.field-meta.xml
<CustomField>
    <fullName>SellInEDate__c</fullName>
    <label>SellIn End Date</label>
    <type>Date</type>
</CustomField>