force-app/main/default/objects/CommercialPlan__c/fields/SellOutBDate__c.field-meta.xml
<CustomField>
    <fullName>SellOutBDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>