force-app/main/default/objects/CommercialPlan__c/fields/SellOutEDate__c.field-meta.xml
<CustomField>
    <fullName>SellOutEDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>