force-app/main/default/objects/CommercialPlan__c/fields/SpentAmount__c.field-meta.xml
<CustomField>
    <fullName>SpentAmount__c</fullName>
    <label>Already Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>