force-app/main/default/objects/CommercialPlan__c/fields/SPKCImage_c__c.field-meta.xml
<CustomField>
    <fullName>SPKCImage_c__c</fullName>
    <formula>BusinessUnitTarget__r.Logo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo BU</label>
    <type>Text</type>
</CustomField>