force-app/main/default/objects/CommercialPlan__c/fields/SPKCLogo__c.field-meta.xml
<CustomField>
    <fullName>SPKCLogo__c</fullName>
    <formula>IF ( RecordType.DeveloperName =&quot;SalesFloorEvent&quot;,

IMAGE(&apos;/resource/LogoSalesFloorEvent/LogoSalesFloorEvent/&apos; + &apos;SalesFloorEvent&apos; +&apos;.png&apos;, &apos;&apos; , 45, 90),

IF ( RecordType.DeveloperName =&quot;TradeMarketingCampaign&quot;,

IMAGE(&apos;/resource/LogoTradeMarketingCampaign/LogoTradeMarketingCampaign/&apos; + &apos;TradeMarketingCampaign&apos; +&apos;.png&apos;, &apos;&apos; , 45, 90), NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visuel PAC</label>
    <type>Text</type>
</CustomField>