force-app/main/default/objects/CommercialPlan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In preparation</fullName>
            </value>
            <value>
                <fullName>Request for approval</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Revue budg. mars.</fullName>
            </value>
            <value>
                <fullName>Revue budg. juin.</fullName>
            </value>
            <value>
                <fullName>Revue budg. sept.</fullName>
            </value>
            <value>
                <fullName>Revue budg. déc.</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Diffused</fullName>
            </value>
            <value>
                <fullName>Printed</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Request for approval Fact</fullName>
            </value>
            <value>
                <fullName>Update with fact data</fullName>
            </value>
            <value>
                <fullName>Validate with fact data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>