force-app/main/default/objects/CommercialPlan__c/fields/SupportLDate__c.field-meta.xml
<CustomField>
    <fullName>SupportLDate__c</fullName>
    <label>Last Support Date</label>
    <type>DateTime</type>
</CustomField>