force-app/main/default/objects/CommercialPlan__c/fields/SupportNote__c.field-meta.xml
<CustomField>
    <fullName>SupportNote__c</fullName>
    <label>Support Note</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>