force-app/main/default/objects/CommercialPlan__c/recordTypes/SalesFloorEvent.recordType-meta.xml
<RecordType>
    <fullName>SalesFloorEvent</fullName>
    <active>true</active>
    <label>Sales Floor Event</label>
</RecordType>