force-app/main/default/objects/CommercialPlan__c/recordTypes/TradeMarketingCampaign.recordType-meta.xml
<RecordType>
    <fullName>TradeMarketingCampaign</fullName>
    <active>true</active>
    <label>Trade Marketing Campaign</label>
</RecordType>