force-app/main/default/objects/CommercialPlan__c/recordTypes/YearlyPromoyear.recordType-meta.xml
<RecordType>
    <fullName>YearlyPromoyear</fullName>
    <active>true</active>
    <label>Yearly Promo year</label>
</RecordType>