force-app/main/default/objects/CommercialPlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BusinessUnitSource__c</columns>
    <columns>BusinessUnitTarget__c</columns>
    <columns>Supplier__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>