force-app/main/default/objects/CommercialPlan__c/listViews/X1_Budget_NIP.listView-meta.xml
<ListView>
    <fullName>X1_Budget_NIP</fullName>
    <columns>NAME</columns>
    <columns>SPKCLogo__c</columns>
    <columns>Supplier__c</columns>
    <columns>BusinessUnitTarget__c</columns>
    <columns>SPKCImage_c__c</columns>
    <columns>Year__c</columns>
    <columns>HierarchyElement__c</columns>
    <columns>SPKCImageCategory_c__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CommercialPlan__c.SalesFloorEvent</value>
    </filters>
    <label>1. Les Budgets NIP</label>
</ListView>