force-app/main/default/objects/CommercialPlan__c/listViews/X2_09_Les_Plans_Promo_M_tro.listView-meta.xml
<ListView>
    <fullName>X2_09_Les_Plans_Promo_M_tro</fullName>
    <columns>NAME</columns>
    <columns>SPKCLogo__c</columns>
    <columns>Supplier__c</columns>
    <columns>BusinessUnitTarget__c</columns>
    <columns>SPKCImage_c__c</columns>
    <columns>Year__c</columns>
    <columns>HierarchyElement__c</columns>
    <columns>SPKCImageCategory_c__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CommercialPlan__c.TradeMarketingCampaign</value>
    </filters>
    <filters>
        <field>Supplier__c</field>
        <operation>equals</operation>
        <value>Metro</value>
    </filters>
    <label>2.09 Les Plans Promo Métro</label>
</ListView>